cmake_minimum_required(VERSION 3.5)
project(loui_example_sdl)
find_package(SDL2 CONFIG REQUIRED)
add_subdirectory(.. louibuild)
FILE(GLOB source "*.cpp" "*.hpp")
add_executable(loui_example_sdl ${source})
target_link_libraries(loui_example_sdl PRIVATE SDL2::SDL2 loui)
target_include_directories(loui_example_sdl PRIVATE ..)
target_compile_features(loui_example_sdl PRIVATE cxx_std_17)
